@@ -1,3 +1,8 @@
+2010-10-06  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompile.c:	Prevent writing to the intrep fields of a
+	* tests/subst.test:	freed Tcl_Obj.  [Bug 3081065]
+
 2010-10-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclExecute.c (TEBCresume): [Bug 3079830]: Added invalidation
